Resolve Sonar issues after moving to JDK 17 (#2639)
* initial commit

* Dagger Inject doesnt work with records?

* fix tests

* fix tests

* fix sonar

* fix sonar